# platform-management-v2

./: .gitignore  Makefile  README.md  pyproject.toml
pmv2/: __init__.py  __main__.py  _version.py
pmv2/cli/: __init__.py  _analyze.py  _insert_services.py  _list.py  _main.py  _mappers.py  _pickle.py  _upload_buildings.py  _upload_functional_zones.py  _upload_physical_objects.py  _upload_services.py
pmv2/cli/duty/: __init__.py  geometries_remap.py  urban_objects_intersections.py
pmv2/logic/: __init__.py  analyze.py  insert_bulk.py  insert_services.py  list_territories.py  pickle.py  sqlite.py  upload_buildings.py  upload_functional_zones.py  upload_physical_objects.py  upload_physical_objects_bulk.py  upload_services.py  upload_services_bulk.py  utils.py
pmv2/logic/duty/: __init__.py  analyze.py  geometries_remap.py  intersections.py
pmv2/urban_client/: __init__.py  _abstract.py  exceptions.py  models.py
pmv2/urban_client/http/: __init__.py  _client.py  exceptions.py  models.py
